--- a/Resources/Prototypes/Maps/amber.yml
+++ b/Resources/Prototypes/Maps/amber.yml
@@ -21,6 +21,7 @@
         availableJobs:
           # command
           Captain: [ 1, 1 ]
+          ADTBlueShieldOfficer: [ 0, 1 ] #ADT-Roles
           IAA: [ 1, 1 ] # Corvax-IAA
           #service
           HeadOfPersonnel: [ 1, 1 ]
