--- a/Resources/Prototypes/_Mini/Entities/Other/blueshield_loadout.yml
+++ b/Resources/Prototypes/_Mini/Entities/Other/blueshield_loadout.yml
@@ -210,3 +210,14 @@
   - DiceBag
   - SpaceCash500
   - CardBoxBlack
+
+- type: thiefBackpackSet
+  id: RapierSet
+  name: Рапира ОСЩ.
+  description: Оружие для профессиональной борьбы на ближней дистанции.
+  sprite:
+    sprite: _Mini/Objects/Weapons/Melee/BlueshieldRapier/blueshield_rapier.rsi
+    state: icon
+  content:
+  - BlueshieldRapier
+  - ClothingBeltSheathBlueshield
