--- a/Resources/Prototypes/_Mini/Entities/Other/blueshield_loadout.yml
+++ b/Resources/Prototypes/_Mini/Entities/Other/blueshield_loadout.yml
@@ -60,6 +60,7 @@
         - PistolSet
         - MinigunSet
         - LaserSwordSet
+        - RapierSet
     - type: ActivatableUI
       key: enum.ThiefBackpackUIKey.Key
     - type: UserInterface
