--- a/Resources/Prototypes/ADT/Roles/Jobs/Command/blueshieldofficer.yml
+++ b/Resources/Prototypes/ADT/Roles/Jobs/Command/blueshieldofficer.yml
@@ -50,7 +50,7 @@
     eyes: ADTClothingEyesGlassesBlueshield
     ears: ADTClothingHeadsetBlueshield
     shoes: ClothingShoesBootsCombatFilled
-    outerClothing: ClothingOuterArmorBasic
+    outerClothing: ClothingOuterArmorVestBlueShield
     gloves: ClothingHandsGlovesCombat
     id: ADTBlueshieldOfficerPDA
     back: ClothingBackpackBlueShield
