--- a/Resources/Maps/Next/next_marathon.yml
+++ b/Resources/Maps/Next/next_marathon.yml
@@ -1,11 +1,11 @@
 meta:
   format: 7
   category: Map
-  engineVersion: 248.0.2
+  engineVersion: 250.0.0
   forkId: ""
   forkVersion: ""
-  time: 04/04/2025 11:20:03
-  entityCount: 22766
+  time: 05/17/2025 09:59:51
+  entityCount: 22770
 maps:
 - 5350
 grids:
@@ -11440,7 +11440,7 @@ entities:
       pos: 34.5,45.5
       parent: 30
     - type: Door
-      secondsUntilStateChange: -25574.873
+      secondsUntilStateChange: -25661.203
       state: Opening
     - type: DeviceLinkSource
       lastSignals:
@@ -52857,6 +52857,7 @@ entities:
     - type: Transform
       pos: 24.465357,37.55109
       parent: 30
+    - type: Visibility
 - proto: ClothingBackpackDuffelSurgeryFilled
   entities:
   - uid: 22956
@@ -52864,6 +52865,7 @@ entities:
     - type: Transform
       pos: -24.508173,-15.332602
       parent: 30
+    - type: Visibility
 - proto: ClothingBeltHolster
   entities:
   - uid: 15997
@@ -115235,13 +115237,8 @@ entities:
   - uid: 1937
     components:
     - type: Transform
-      pos: -39.5,54.5
+      pos: -39.5,53.5
       parent: 30
-    - type: MaterialStorage
-      materialWhiteList:
-      - Glass
-      - Plastic
-      - Steel
 - proto: SeedExtractor
   entities:
   - uid: 2345
@@ -120319,6 +120316,34 @@ entities:
     components:
     - type: Transform
       pos: -31.5,59.5
+      parent: 30
+- proto: SpawnPointSeniorEngineer
+  entities:
+  - uid: 10389
+    components:
+    - type: Transform
+      pos: -20.5,-41.5
+      parent: 30
+- proto: SpawnPointSeniorOfficer
+  entities:
+  - uid: 10385
+    components:
+    - type: Transform
+      pos: -34.5,58.5
+      parent: 30
+- proto: SpawnPointSeniorPhysician
+  entities:
+  - uid: 10387
+    components:
+    - type: Transform
+      pos: -16.5,-20.5
+      parent: 30
+- proto: SpawnPointSeniorResearcher
+  entities:
+  - uid: 10391
+    components:
+    - type: Transform
+      pos: 30.5,20.5
       parent: 30
 - proto: SpawnPointServiceWorker
   entities:
