--- a/Resources/Maps/Next/next_packed.yml
+++ b/Resources/Maps/Next/next_packed.yml
@@ -1,11 +1,11 @@
 meta:
   format: 7
   category: Map
-  engineVersion: 248.0.2
+  engineVersion: 250.0.0
   forkId: ""
   forkVersion: ""
-  time: 04/04/2025 16:49:59
-  entityCount: 14012
+  time: 05/17/2025 10:14:01
+  entityCount: 14016
 maps:
 - 1
 grids:
@@ -7465,7 +7465,7 @@ entities:
       pos: 24.5,-39.5
       parent: 2
     - type: Door
-      secondsUntilStateChange: -55968.535
+      secondsUntilStateChange: -56061.035
       state: Opening
     - type: DeviceLinkSource
       lastSignals:
@@ -10807,6 +10807,7 @@ entities:
     - type: Transform
       pos: 19.585323,-12.603194
       parent: 2
+    - type: Visibility
 - proto: BoxSechud
   entities:
   - uid: 672
@@ -33606,6 +33607,7 @@ entities:
     - type: Transform
       pos: 27.493172,5.5327587
       parent: 2
+    - type: Visibility
 - proto: ClothingBeltChampion
   entities:
   - uid: 5164
@@ -41625,7 +41627,7 @@ entities:
       pos: 54.5,-4.5
       parent: 2
     - type: Door
-      secondsUntilStateChange: -37324.363
+      secondsUntilStateChange: -37416.863
       state: Closing
     - type: DeviceNetwork
       deviceLists:
@@ -71697,6 +71699,34 @@ entities:
     components:
     - type: Transform
       pos: 37.5,18.5
+      parent: 2
+- proto: SpawnPointSeniorEngineer
+  entities:
+  - uid: 14014
+    components:
+    - type: Transform
+      pos: 31.5,-31.5
+      parent: 2
+- proto: SpawnPointSeniorOfficer
+  entities:
+  - uid: 14016
+    components:
+    - type: Transform
+      pos: 34.5,25.5
+      parent: 2
+- proto: SpawnPointSeniorPhysician
+  entities:
+  - uid: 14013
+    components:
+    - type: Transform
+      pos: 73.5,7.5
+      parent: 2
+- proto: SpawnPointSeniorResearcher
+  entities:
+  - uid: 14015
+    components:
+    - type: Transform
+      pos: 55.5,23.5
       parent: 2
 - proto: SpawnPointServiceWorker
   entities:
