--- a/Resources/Maps/Next/next_paper.yml
+++ b/Resources/Maps/Next/next_paper.yml
@@ -1,11 +1,11 @@
 meta:
   format: 7
   category: Map
-  engineVersion: 248.0.2
+  engineVersion: 250.0.0
   forkId: ""
   forkVersion: ""
-  time: 04/04/2025 16:51:54
-  entityCount: 18209
+  time: 05/17/2025 10:15:58
+  entityCount: 18212
 maps:
 - 1
 grids:
@@ -17865,6 +17865,7 @@ entities:
     - type: Transform
       pos: 33.530327,-2.3209026
       parent: 2
+    - type: Visibility
 - proto: BoxPillCanister
   entities:
   - uid: 1316
@@ -45250,6 +45251,19 @@ entities:
     - type: Transform
       pos: 20.5,-13.5
       parent: 2
+- proto: ChemistryBottleNocturine
+  entities:
+  - uid: 8892
+    components:
+    - type: MetaData
+      name: бутылочка
+    - type: Transform
+      parent: 12296
+    - type: Label
+      currentLabel: снотворное
+    - type: Physics
+      canCollide: False
+    - type: InsideEntityStorage
 - proto: ChemistryHotplate
   entities:
   - uid: 9041
@@ -46455,6 +46469,7 @@ entities:
     - type: Transform
       pos: 73.48328,2.7752597
       parent: 2
+    - type: Visibility
 - proto: ClothingBackpackERTClown
   entities:
   - uid: 77
@@ -46480,6 +46495,7 @@ entities:
           component: Armor
         title: null
     - type: InsideEntityStorage
+    - type: Visibility
 - proto: ClothingBeltMercWebbing
   entities:
   - uid: 6686
@@ -54864,7 +54880,7 @@ entities:
     - type: Label
       currentLabel: кофейный ликёр
     - type: PressurizedSolution
-      sprayFizzinessThresholdRoll: 0.40448093
+      sprayFizzinessThresholdRoll: 0.9048141
     - type: NameModifier
       baseName: бутылка кофейного ликёра
     - type: ContainerContainer
@@ -55150,7 +55166,7 @@ entities:
     - type: Label
       currentLabel: ром
     - type: PressurizedSolution
-      sprayFizzinessThresholdRoll: 0.77198195
+      sprayFizzinessThresholdRoll: 0.4485367
     - type: NameModifier
       baseName: кубинский пряный ром капитана Пита
     - type: ContainerContainer
@@ -55192,7 +55208,7 @@ entities:
     - type: Label
       currentLabel: текила
     - type: PressurizedSolution
-      sprayFizzinessThresholdRoll: 0.05164974
+      sprayFizzinessThresholdRoll: 0.504842
     - type: NameModifier
       baseName: бутылка текилы Каккаво гарантированного качества
     - type: ContainerContainer
@@ -55233,7 +55249,7 @@ entities:
     - type: Label
       currentLabel: вермут
     - type: PressurizedSolution
-      sprayFizzinessThresholdRoll: 0.8409766
+      sprayFizzinessThresholdRoll: 0.28199586
     - type: NameModifier
       baseName: бутылка вермута Золотой глаз
     - type: ContainerContainer
@@ -55256,7 +55272,7 @@ entities:
     - type: Label
       currentLabel: водка
     - type: PressurizedSolution
-      sprayFizzinessThresholdRoll: 0.14577857
+      sprayFizzinessThresholdRoll: 0.625876
     - type: NameModifier
       baseName: бутылка водки
     - type: ContainerContainer
@@ -55306,7 +55322,7 @@ entities:
     - type: Label
       currentLabel: вино
     - type: PressurizedSolution
-      sprayFizzinessThresholdRoll: 0.14975822
+      sprayFizzinessThresholdRoll: 0.37719676
     - type: NameModifier
       baseName: особое двухбородое бородатое вино
     - type: ContainerContainer
@@ -59014,7 +59030,7 @@ entities:
       pos: 39.5,13.5
       parent: 2
     - type: Door
-      secondsUntilStateChange: -45984.918
+      secondsUntilStateChange: -46082.36
       state: Closing
     - type: DeviceNetwork
       deviceLists:
@@ -89309,19 +89325,6 @@ entities:
     - type: Transform
       pos: 48.51483,-9.616904
       parent: 2
-- proto: NocturineChemistryBottle
-  entities:
-  - uid: 8892
-    components:
-    - type: MetaData
-      name: бутылочка
-    - type: Transform
-      parent: 12296
-    - type: Label
-      currentLabel: снотворное
-    - type: Physics
-      canCollide: False
-    - type: InsideEntityStorage
 - proto: NotekeeperCartridge
   entities:
   - uid: 12633
@@ -90959,11 +90962,6 @@ entities:
       parent: 2
 - proto: PortableFlasher
   entities:
-  - uid: 12819
-    components:
-    - type: Transform
-      pos: 56.5,31.5
-      parent: 2
   - uid: 12820
     components:
     - type: Transform
@@ -103490,6 +103488,34 @@ entities:
     components:
     - type: Transform
       pos: 56.5,23.5
+      parent: 2
+- proto: SpawnPointSeniorEngineer
+  entities:
+  - uid: 18006
+    components:
+    - type: Transform
+      pos: 44.5,60.5
+      parent: 2
+- proto: SpawnPointSeniorOfficer
+  entities:
+  - uid: 18005
+    components:
+    - type: Transform
+      pos: 53.5,20.5
+      parent: 2
+- proto: SpawnPointSeniorPhysician
+  entities:
+  - uid: 12819
+    components:
+    - type: Transform
+      pos: 44.5,3.5
+      parent: 2
+- proto: SpawnPointSeniorResearcher
+  entities:
+  - uid: 17990
+    components:
+    - type: Transform
+      pos: 21.5,-1.5
       parent: 2
 - proto: SpawnPointServiceWorker
   entities:
