--- a/Resources/Maps/Next/next_amber.yml
+++ b/Resources/Maps/Next/next_amber.yml
@@ -4,8 +4,8 @@ meta:
   engineVersion: 250.0.0
   forkId: ""
   forkVersion: ""
-  time: 05/17/2025 09:47:37
-  entityCount: 21452
+  time: 05/17/2025 16:38:40
+  entityCount: 21450
 maps:
 - 1
 grids:
@@ -24640,6 +24640,8 @@ entities:
     - type: Transform
       pos: -13.459316,-32.28296
       parent: 2
+    - type: CollisionWake
+      enabled: False
     - type: Conveyed
   - uid: 3726
     components:
@@ -56174,17 +56176,17 @@ entities:
   - uid: 21324
     components:
     - type: Transform
-      pos: 13.341,25.556223
+      pos: 17.728107,24.604982
       parent: 2
   - uid: 21325
     components:
     - type: Transform
-      pos: 13.575375,25.556223
+      pos: 17.446857,24.667482
       parent: 2
   - uid: 21326
     components:
     - type: Transform
-      pos: 13.794125,25.556223
+      pos: 17.353107,24.589357
       parent: 2
 - proto: ClothingHeadsetRobotics
   entities:
@@ -107181,11 +107183,6 @@ entities:
       rot: 1.5707963267948966 rad
       pos: -4.5,-56.5
       parent: 2
-  - uid: 20513
-    components:
-    - type: Transform
-      pos: 13.5,25.5
-      parent: 2
   - uid: 20674
     components:
     - type: Transform
@@ -107201,6 +107198,11 @@ entities:
     components:
     - type: Transform
       pos: -10.5,-13.5
+      parent: 2
+  - uid: 20967
+    components:
+    - type: Transform
+      pos: 17.5,24.5
       parent: 2
 - proto: RadioHandheld
   entities:
@@ -117333,33 +117335,12 @@ entities:
     - type: Transform
       pos: -25.5,16.5
       parent: 2
-- proto: SpawnPointSeniorEngineer
+- proto: SpawnPointSeniorSalvageSpecialist
   entities:
-  - uid: 20969
+  - uid: 20513
     components:
     - type: Transform
-      pos: -7.5,-14.5
-      parent: 2
-- proto: SpawnPointSeniorOfficer
-  entities:
-  - uid: 6989
-    components:
-    - type: Transform
-      pos: -25.5,-8.5
-      parent: 2
-- proto: SpawnPointSeniorPhysician
-  entities:
-  - uid: 20967
-    components:
-    - type: Transform
-      pos: -35.5,-22.5
-      parent: 2
-- proto: SpawnPointSeniorResearcher
-  entities:
-  - uid: 20968
-    components:
-    - type: Transform
-      pos: 34.5,-31.5
+      pos: 16.5,23.5
       parent: 2
 - proto: SpawnPointServiceWorker
   entities:
@@ -118440,6 +118421,13 @@ entities:
     components:
     - type: Transform
       pos: 26.5,-35.5
+      parent: 2
+- proto: SuitStorageSeniorSalvageSpecialistFilled
+  entities:
+  - uid: 6989
+    components:
+    - type: Transform
+      pos: 13.5,25.5
       parent: 2
 - proto: SuitStorageWarden
   entities:
