--- a/Resources/Maps/Next/next_paper.yml
+++ b/Resources/Maps/Next/next_paper.yml
@@ -4,8 +4,8 @@ meta:
   engineVersion: 250.0.0
   forkId: ""
   forkVersion: ""
-  time: 05/17/2025 10:15:58
-  entityCount: 18212
+  time: 05/17/2025 16:37:46
+  entityCount: 18210
 maps:
 - 1
 grids:
@@ -54880,7 +54880,7 @@ entities:
     - type: Label
       currentLabel: кофейный ликёр
     - type: PressurizedSolution
-      sprayFizzinessThresholdRoll: 0.9048141
+      sprayFizzinessThresholdRoll: 0.21342923
     - type: NameModifier
       baseName: бутылка кофейного ликёра
     - type: ContainerContainer
@@ -55166,7 +55166,7 @@ entities:
     - type: Label
       currentLabel: ром
     - type: PressurizedSolution
-      sprayFizzinessThresholdRoll: 0.4485367
+      sprayFizzinessThresholdRoll: 0.3007692
     - type: NameModifier
       baseName: кубинский пряный ром капитана Пита
     - type: ContainerContainer
@@ -55208,7 +55208,7 @@ entities:
     - type: Label
       currentLabel: текила
     - type: PressurizedSolution
-      sprayFizzinessThresholdRoll: 0.504842
+      sprayFizzinessThresholdRoll: 0.090290554
     - type: NameModifier
       baseName: бутылка текилы Каккаво гарантированного качества
     - type: ContainerContainer
@@ -55249,7 +55249,7 @@ entities:
     - type: Label
       currentLabel: вермут
     - type: PressurizedSolution
-      sprayFizzinessThresholdRoll: 0.28199586
+      sprayFizzinessThresholdRoll: 0.8743822
     - type: NameModifier
       baseName: бутылка вермута Золотой глаз
     - type: ContainerContainer
@@ -55272,7 +55272,7 @@ entities:
     - type: Label
       currentLabel: водка
     - type: PressurizedSolution
-      sprayFizzinessThresholdRoll: 0.625876
+      sprayFizzinessThresholdRoll: 0.8587072
     - type: NameModifier
       baseName: бутылка водки
     - type: ContainerContainer
@@ -55322,7 +55322,7 @@ entities:
     - type: Label
       currentLabel: вино
     - type: PressurizedSolution
-      sprayFizzinessThresholdRoll: 0.37719676
+      sprayFizzinessThresholdRoll: 0.5576852
     - type: NameModifier
       baseName: особое двухбородое бородатое вино
     - type: ContainerContainer
@@ -59030,7 +59030,7 @@ entities:
       pos: 39.5,13.5
       parent: 2
     - type: Door
-      secondsUntilStateChange: -46082.36
+      secondsUntilStateChange: -46137.42
       state: Closing
     - type: DeviceNetwork
       deviceLists:
@@ -99386,6 +99386,9 @@ entities:
     - type: Transform
       pos: -6.389991,26.549019
       parent: 2
+    - type: CollisionWake
+      enabled: False
+    - type: Conveyed
   - uid: 14317
     components:
     - type: Transform
@@ -103489,33 +103492,12 @@ entities:
     - type: Transform
       pos: 56.5,23.5
       parent: 2
-- proto: SpawnPointSeniorEngineer
-  entities:
-  - uid: 18006
-    components:
-    - type: Transform
-      pos: 44.5,60.5
-      parent: 2
-- proto: SpawnPointSeniorOfficer
-  entities:
-  - uid: 18005
-    components:
-    - type: Transform
-      pos: 53.5,20.5
-      parent: 2
-- proto: SpawnPointSeniorPhysician
+- proto: SpawnPointSeniorSalvageSpecialist
   entities:
   - uid: 12819
     components:
     - type: Transform
-      pos: 44.5,3.5
-      parent: 2
-- proto: SpawnPointSeniorResearcher
-  entities:
-  - uid: 17990
-    components:
-    - type: Transform
-      pos: 21.5,-1.5
+      pos: -4.5,18.5
       parent: 2
 - proto: SpawnPointServiceWorker
   entities:
@@ -105082,6 +105064,13 @@ entities:
           ents:
           - 46
           - 48
+- proto: SuitStorageSeniorSalvageSpecialistFilled
+  entities:
+  - uid: 17990
+    components:
+    - type: Transform
+      pos: -4.5,17.5
+      parent: 2
 - proto: SuitStorageWarden
   entities:
   - uid: 12293
@@ -109588,7 +109577,7 @@ entities:
   - uid: 1072
     components:
     - type: Transform
-      pos: -4.5,17.5
+      pos: 1.5,18.5
       parent: 2
 - proto: VendingMachineSciDrobe
   entities:
