--- a/Resources/Maps/plasma.yml
+++ b/Resources/Maps/plasma.yml
@@ -1,11 +1,11 @@
 meta:
   format: 7
   category: Map
-  engineVersion: 248.0.0
+  engineVersion: 250.0.0
   forkId: ""
   forkVersion: ""
-  time: 03/09/2025 09:02:52
-  entityCount: 26218
+  time: 05/17/2025 16:53:36
+  entityCount: 26225
 maps:
 - 1
 grids:
@@ -25271,6 +25271,7 @@ entities:
     - type: Transform
       pos: -55.446175,-36.496502
       parent: 2
+    - type: Visibility
 - proto: BoxPillCanister
   entities:
   - uid: 16667
@@ -54724,6 +54725,13 @@ entities:
     - type: Transform
       pos: -24.484737,-64.29825
       parent: 2
+- proto: CaptainDrobe
+  entities:
+  - uid: 2900
+    components:
+    - type: Transform
+      pos: -45.5,2.5
+      parent: 2
 - proto: CaptainIDCard
   entities:
   - uid: 22261
@@ -63580,6 +63588,23 @@ entities:
     - type: Transform
       pos: -39.5,-25.5
       parent: 2
+- proto: ChemistryBottleEpinephrine
+  entities:
+  - uid: 2612
+    components:
+    - type: Transform
+      pos: -60.347107,-3.8663821
+      parent: 2
+  - uid: 6479
+    components:
+    - type: Transform
+      pos: -36.623154,-30.40255
+      parent: 2
+  - uid: 6480
+    components:
+    - type: Transform
+      pos: -36.404404,-30.261925
+      parent: 2
 - proto: ChemistryHotplate
   entities:
   - uid: 3949
@@ -64343,26 +64368,31 @@ entities:
     - type: Transform
       pos: -41.47029,-38.43946
       parent: 2
+    - type: Visibility
   - uid: 4070
     components:
     - type: Transform
       pos: -23.501163,-36.28371
       parent: 2
+    - type: Visibility
   - uid: 4071
     components:
     - type: Transform
       pos: -23.485538,-38.330585
       parent: 2
+    - type: Visibility
   - uid: 8059
     components:
     - type: Transform
       pos: -124.49293,-55.3451
       parent: 2
+    - type: Visibility
   - uid: 13573
     components:
     - type: Transform
       pos: -34.523182,-37.31406
       parent: 2
+    - type: Visibility
 - proto: ClothingBackpackWaterTank
   entities:
   - uid: 3370
@@ -65322,13 +65352,6 @@ entities:
       rot: 3.141592653589793 rad
       pos: -133.5,-48.5
       parent: 2
-- proto: ComputerSalvageExpedition
-  entities:
-  - uid: 22987
-    components:
-    - type: Transform
-      pos: -95.5,35.5
-      parent: 2
 - proto: ComputerShuttleCargo
   entities:
   - uid: 2711
@@ -65346,6 +65369,13 @@ entities:
     components:
     - type: Transform
       pos: -91.5,25.5
+      parent: 2
+- proto: ComputerShuttleMiningLavaland
+  entities:
+  - uid: 22987
+    components:
+    - type: Transform
+      pos: -95.5,35.5
       parent: 2
 - proto: ComputerSolarControl
   entities:
@@ -76411,13 +76441,6 @@ entities:
     - type: Transform
       pos: -51.5,-38.5
       parent: 2
-- proto: DresserCaptainFilled
-  entities:
-  - uid: 2900
-    components:
-    - type: Transform
-      pos: -45.5,2.5
-      parent: 2
 - proto: DresserChiefEngineerFilled
   entities:
   - uid: 6289
@@ -76740,23 +76763,6 @@ entities:
     - type: Transform
       rot: 3.141592653589793 rad
       pos: -112.5,34.5
-      parent: 2
-- proto: EpinephrineChemistryBottle
-  entities:
-  - uid: 2612
-    components:
-    - type: Transform
-      pos: -60.347107,-3.8663821
-      parent: 2
-  - uid: 6479
-    components:
-    - type: Transform
-      pos: -36.623154,-30.40255
-      parent: 2
-  - uid: 6480
-    components:
-    - type: Transform
-      pos: -36.404404,-30.261925
       parent: 2
 - proto: ExosuitFabricator
   entities:
@@ -142477,6 +142483,13 @@ entities:
       rot: -1.5707963267948966 rad
       pos: -115.5,20.5
       parent: 2
+- proto: SpawnADTBlueShieldOfficer
+  entities:
+  - uid: 23593
+    components:
+    - type: Transform
+      pos: -61.5,6.5
+      parent: 2
 - proto: SpawnMechRipley
   entities:
   - uid: 19753
@@ -142519,6 +142532,13 @@ entities:
     - type: Transform
       pos: -53.5,-1.5
       parent: 2
+- proto: SpawnMobGorillaLargo
+  entities:
+  - uid: 12764
+    components:
+    - type: Transform
+      pos: -88.5,33.5
+      parent: 2
 - proto: SpawnMobMcGriff
   entities:
   - uid: 22277
@@ -142539,13 +142559,6 @@ entities:
     components:
     - type: Transform
       pos: -126.5,-18.5
-      parent: 2
-- proto: SpawnMobRaccoonMorticia
-  entities:
-  - uid: 12764
-    components:
-    - type: Transform
-      pos: -88.5,33.5
       parent: 2
 - proto: SpawnMobShiva
   entities:
@@ -143078,6 +143091,41 @@ entities:
     components:
     - type: Transform
       pos: -85.5,-28.5
+      parent: 2
+- proto: SpawnPointSeniorEngineer
+  entities:
+  - uid: 22432
+    components:
+    - type: Transform
+      pos: -115.5,-22.5
+      parent: 2
+- proto: SpawnPointSeniorOfficer
+  entities:
+  - uid: 22354
+    components:
+    - type: Transform
+      pos: -92.5,-29.5
+      parent: 2
+- proto: SpawnPointSeniorPhysician
+  entities:
+  - uid: 22431
+    components:
+    - type: Transform
+      pos: -24.5,-45.5
+      parent: 2
+- proto: SpawnPointSeniorResearcher
+  entities:
+  - uid: 22991
+    components:
+    - type: Transform
+      pos: -128.5,-45.5
+      parent: 2
+- proto: SpawnPointSeniorSalvageSpecialist
+  entities:
+  - uid: 22992
+    components:
+    - type: Transform
+      pos: -91.5,29.5
       parent: 2
 - proto: SpawnPointServiceWorker
   entities:
@@ -143622,6 +143670,7 @@ entities:
     - type: Transform
       pos: -112.5,18.5
       parent: 2
+    - type: Conveyed
   - uid: 5807
     components:
     - type: Transform
@@ -143632,6 +143681,7 @@ entities:
     - type: Transform
       pos: -109.5,18.5
       parent: 2
+    - type: Conveyed
   - uid: 8610
     components:
     - type: Transform
@@ -143990,6 +144040,13 @@ entities:
     components:
     - type: Transform
       pos: -80.5,-22.5
+      parent: 2
+- proto: SuitStorageSeniorSalvageSpecialistFilled
+  entities:
+  - uid: 23199
+    components:
+    - type: Transform
+      pos: -92.5,30.5
       parent: 2
 - proto: SuitStorageWarden
   entities:
@@ -166262,7 +166319,7 @@ entities:
       lastSignals:
         DoorStatus: True
     - type: Door
-      secondsUntilStateChange: -199343.58
+      secondsUntilStateChange: -199436.05
       state: Opening
     - type: Airlock
       autoClose: False
